--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "sinon": "^15.0.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "razorpay": "^2.8.6",
+    "uuid": "^9.0.0"
   }
 }
